  * Lots of debug messages and an attempt at fixing high CPU load.
